loner/src/css/index.css
/* ... */
.root, .App{
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100%;
}

a{
	color: #08a14d;
	text-decoration: none;
}

.icon{
    height: 40px;
	width: 40px;
    padding: 5px;
    clip-path: circle(50%);
    fill: var(--icon-fill-color);
}

.icon:hover{
    background-color: #8c8b8b93;
    cursor: pointer;
}

.theme-icon{
    width: 45px;
    height: 45px;
    padding: 5px;
    clip-path: circle(50%);
}

.theme-icon:hover{
    background-color: #626060aa;
    cursor: pointer;
}

.column{
	display: flex;
	flex-direction: column;
}

.row{
	display: flex;
}

.margin-5px{
    margin: 5px;
}

.margin-10px{
	margin: 10px;
}

.center{
	justify-content: center;
	align-items: center;
}

.error{
    color: #f60303;
}

.font-18px{
	font-size: 18px;
}

.font-14px{
	font-size: 14px;
}

.title-22px{
    font-size: 22px;
    font-weight: 400;
}

.title-18px{
    font-size: 18px;
    font-weight: 555;
}

.right-end{
    margin-left: auto;
}

.left-end{
    margin-right: auto;
}


.input{
    background-color: transparent;
    border-radius: 4px;
    padding: 4px;
    color: var(--default-font-color);
    border: 3px solid #878585;
}

.input:hover{
    border: 3px solid #0ec3ec;
}

.input:active, .input:focus{
    border: 3px solid #079cbd;
}

.input-error, .input-error:hover, .input-error:focus{
    border: 3px solid #f61010;
}


.btn{
    padding: 10px;
    border-radius: 3px;
    color: #fff;
    background-color: #0780bd;
    margin: 5px;
    cursor: pointer;
}

.btn:hover{
    background-color: #065e8a;
}

.margin-top{
    margin-top: 50px;
}

.tag-line{
    color: var(--tag-line-color);
    font-size: 18px;
    font-style: italic;
}

/* --------------------------- loading wheel ----------------------------- */

.loading-wheel {
    border: 8px solid #cfcdcd;
    border-radius: 50%;
    border-top: 8px solid #3498db;
    width: 50px;
    height: 50px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
  }
  
  /* Safari */
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }


/* ---------------- chat mafia ------------- */

.chat-page{
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.info{
    max-width: 200px;
    max-height: 100%;
}

.mafia-name{
	font-weight: 400;
    text-overflow: ellipsis;
    font-size: 22px;
}

.mafia-tag{
	color: #878585;
    text-overflow: ellipsis;
    white-space:nowrap;
    overflow: hidden;
    font-size: 14px;
}

.mafia-icon{
	width: 50px;
	height: 50px;
	clip-path: circle(50%);
	background-color: #878585;
}

.chat-header{
	position: fixed;
	top: 0px;
	left: 0px;
	z-index: 2;
	width: 100%;
	display: flex;
	background-color: var(--chat-header);
	height: 60px;
	align-items: center;
    justify-content: space-between;
    box-shadow: 0 0 4px #4b779d;
}

.peckspace-promo{
	display: block;
	font-size: 18px;
}


.chat-body{
    position: relative;
    top: 60px;
    height: calc(100% - 120px);
    padding: 20px;
    overflow-y: auto;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    gap: 20px;
    list-style: none;
    width: 100%;
    justify-self: center;
    align-self: center;
    background-color: var(--chat-background);
    background-image: var(--chat-background-img);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: contain;
}

/* ------------------ chat card --------------------- */

.chat-card{
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
    padding: 5px;
    max-width: fit-content;
    height: fit-content;
}

.chat-card .message-body{
    min-height: 10px;
    max-width: 90%;
    padding: 10px;
    width: max-content;
    border-radius: 5px;
    white-space: pre-line;
    overflow-wrap: break-word;
    word-break: break-all;
    word-wrap: break-word;
    height: max-content;
    box-shadow: 0 0 10px #4b779d;
}

.chat-card .user-icon{
    width: 40px;
    height: 40px;
    /* clip-path: circle(50%); */
	background-color: #000000;
    box-shadow: 0 0 10px #4b779d;
    margin-top: auto;
    background: url("../icons/default-avatar.svg");/*default icon*/
    background-size:     cover;            
    background-repeat:   no-repeat;
    background-position: center center;  
}

.chat-card .chat-media{
    max-width: 90%;
    max-height: 600px;
    padding: 2px;
    height: auto;
    width: auto;
    border-radius: 20px;
    box-shadow: 0 0 10px #4b779d;
}

.sender{
    justify-content: end;
}

.receiver{
    background-color: var(--chat-receiver);
    margin-left: 10px;
}

.sender{
    background-color: var(--chat-sender);
    margin-right: 10px;
}

.chat-card .username-time{
    color: #858484;
    font-size: 14px;
}

/* --------------------- chat reaction ------------------ */

.reactions-container{
    position: relative;
    display: flex;
    align-items: center;
}

.reaction{
    font-size: 16px;
    background-color: var(--reaction-bg);
    border-radius: 10px;
    cursor: pointer;
    padding: 3px;
    border: 2px solid transparent;
    box-shadow: 0 0 10px #4b779d;
    margin: 2px;
    height: 30px;
}

.reaction:hover{
    border: 2px solid #065e8a;
}

.reaction-clicked{
    color: #fff;
    background-color: var(--reaction-clicked-bg);
}

/* ----------------- message input container --------------*/
.message-container{
    width: 100%;
    z-index: 2;
    display: flex;
    width: 100%;
    height: fit-content;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 0px;
}

.send-btn{
    background-color: #1fc111;
    border: 0px;
    border-radius: 50%;
    margin: 5px;
    min-width: 50px;
    max-width: 150px;
    height: 50px;
    box-shadow: 0 0 10px #6c6b6b;
}
/* ... */

